# QZFM

./: QZFM.py  README.md  __init__.py  pyproject.toml  requirements.txt
docs/: README.md
docs/src/: QZFM.md  index.md
docs/src/QZFM/: LabJack.md  QZFM.md  index.md
firmware/: Master_Firmware_Triax_V8_09-28-2023_V2_20.hex  README.md
src/: QZFM.py
src/QZFM/: LabJack.py  QZFM.py  __init__.py
